--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="qorXNvNlWQ245jGfR_jaotdsCcAcBlQysIIbHQF-kyE" />
     <title>Minefield Challenge</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
